@@ -166,8 +166,6 @@ namespace kt
         else
             net::Socks::setSocksAuthentication(QString::null, QString::null);
 
-        bt::TimeEstimator::setAlgorithm((bt::TimeEstimator::ETAlgorithm)Settings::eta());
-
         bt::ChunkManager::setPreviewSizes(Settings::previewSizeAudio() * 1024, Settings::previewSizeVideo() * 1024);
         bt::QueueManagerInterface::setQueueManagerEnabled(!Settings::manuallyControlTorrents());
         bt::Downloader::setUseWebSeeds(Settings::webseedsEnabled());
